@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
++ [nextmedia] Add support for NextTV (壹電視)
+
+
 version 2017.01.22
 
 Extractors
